# zinc-test

./: .gitignore  Dockerfile  README.md  alembic.ini  compose.yml.tmpl  pyproject.toml  sales.csv
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 24725eb2c136_initial_migrate.py  78aad31595fe_change_table_name_to_plural.py
src/: app.py  config.py
src/controllers/: health.py  import_sales.py  metrics.py
src/helpers/: datetime.py
src/models/: __init__.py  order.py  order_item.py  product.py
src/tests/: test_health.py  test_import.py  test_metrics.py
src/utils/: db.py  sentry.py
src/views/: health.py  import_sales.py  metrics.py
